--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,8 @@ p{color: var(--color-text);}
 .first__section{
     background-image: url(./assets/Background.svg);
     background-repeat:no-repeat;
-   align-items: center;
-   text-align: center;
+    align-items: center;
+    text-align: center;
 }
 
 .containner{
@@ -92,7 +92,7 @@ p{color: var(--color-text);}
     width: 70%;
 }
 .second__section__message{
-    padding-right: 3em;
+    margin-right: 3em;
 }
 .second__section__message__title{
     font-weight: 700;
@@ -144,7 +144,7 @@ p{color: var(--color-text);}
     font-size: 3rem;
 }
 .images__andtext{
-    display: flex;
+   display: flex;
    justify-content: space-between;
    align-items: center;
    margin:5em;
